--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.alorma.github" >
+    package="com.alorma.github">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,7 +15,9 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE"
+        tools:node="remove" />
 
     <application
         android:name=".GitskariosApplication"
@@ -23,10 +25,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:launchMode="singleInstance"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,18 +47,21 @@
         <activity android:name=".ui.activity.ProfileActivity" />
         <activity android:name=".ui.activity.CommitDetailActivity" />
         <activity android:name=".ui.activity.RepoDetailActivity" />
-        <activity android:name=".ui.activity.SearchActivity" />
+        <activity
+            android:name=".ui.activity.SearchActivity"
+            android:theme="@style/AppThemeSearch" />
         <activity android:name=".ui.dialog.NewIssueCommentActivity" />
         <activity android:name=".ui.activity.FileActivity" />
         <activity android:name=".ui.activity.ContentCommitsActivity" />
         <activity android:name=".ui.activity.OrganizationActivity" />
         <activity android:name=".ui.activity.ReleaseDetailActivity" />
         <activity android:name=".ui.activity.CompareRepositoryCommitsActivity" />
-        <activity android:name=".ui.activity.ManageRepositoryActivity"
-            android:label="@string/repository_settings"/>
+        <activity
+            android:name=".ui.activity.ManageRepositoryActivity"
+            android:label="@string/repository_settings" />
         <activity
             android:name=".Interceptor"
-            android:theme="@android:style/Theme.NoDisplay" >
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -74,8 +79,8 @@
         </activity>
         <activity
             android:name=".ui.activity.gists.GistsMainActivity"
-            android:label="@string/title_gists" >
-            <intent-filter android:label="@string/open_gist" >
+            android:label="@string/title_gists">
+            <intent-filter android:label="@string/open_gist">
                 <action android:name="android.intent.action.SEND" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -84,7 +89,7 @@
                     android:host="gist.github.com"
                     android:mimeType="text/*" />
             </intent-filter>
-            <intent-filter android:label="@string/open_gist" >
+            <intent-filter android:label="@string/open_gist">
                 <action android:name="android.intent.action.VIEW" />
 
                 <data
@@ -104,7 +109,7 @@
         <activity android:name=".ui.activity.gists.GistsFileActivity" />
         <activity
             android:name=".ui.activity.gists.CreateGistActivity"
-            android:label="@string/create_gist" >
+            android:label="@string/create_gist">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -129,17 +134,19 @@
         <activity android:name=".ui.activity.SearchIssuesActivity" />
         <activity android:name=".ui.activity.PullRequestCommitsActivity" />
         <activity android:name=".ui.activity.PullRequestFilesActivity" />
-        <activity android:name=".ui.activity.ContentEditorActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".ui.activity.ContentEditorActivity"
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name="com.alorma.github.emoji.EmojisActivity"
-            android:label="@string/emoji_activity"/>
+        <activity
+            android:name="com.alorma.github.emoji.EmojisActivity"
+            android:label="@string/emoji_activity" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="e331bb7b7ec0167c4cfcc3b095a54a718802f080" />
 
-        <service android:name=".account.AccountService" >
+        <service android:name=".account.AccountService">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
@@ -151,7 +158,7 @@
         <service
             android:name=".account.NotificationsSyncService"
             android:exported="true"
-            android:process=":sync" >
+            android:process=":sync">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
