--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,9 +122,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
         transitive = true;
     }
-    compile('com.mikepenz:aboutlibraries:5.0.6@aar') {
-        transitive = true
-    }
     compile 'com.github.xiprox.errorview:library:2.2.0'
     compile 'com.android.support:design:23.0.0'
     compile 'com.android.support:appcompat-v7:23.0.0'
@@ -138,11 +135,15 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'org.ocpsoft.prettytime:prettytime:3.2.4.Final'
 
-    compile('com.mikepenz:materialdrawer:3.1.2@aar') {
+    compile('com.mikepenz:aboutlibraries:5.2.0@aar') {
         transitive = true
     }
-    compile('com.mikepenz:actionitembadge:3.0.4@aar')
-    compile 'com.mikepenz.iconics:octicons-typeface:2.2.0@aar'
+    compile('com.mikepenz:materialdrawer:4.0.3@aar') {
+        transitive = true
+    }
+    compile('com.mikepenz:actionitembadge:3.1.1@aar')
+    compile 'com.mikepenz:octicons-typeface:3.0.0.1@aar'
+    compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
 
     compile 'com.github.d-max:spots-dialog:0.3'
     compile 'com.squareup:otto:1.3.8'
