--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
 
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+
     <uses-permission
         android:name="android.permission.READ_PHONE_STATE"
         tools:node="remove" />
@@ -46,7 +48,8 @@
         <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.ProfileActivity" />
         <activity android:name=".ui.activity.CommitDetailActivity" />
-        <activity android:name=".ui.activity.RepoDetailActivity" />
+        <activity android:name=".ui.activity.RepoDetailActivity"
+            android:exported="true"/>
         <activity
             android:name=".ui.activity.SearchActivity"
             android:theme="@style/AppThemeSearch" />
