--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,8 +48,9 @@
         <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.ProfileActivity" />
         <activity android:name=".ui.activity.CommitDetailActivity" />
-        <activity android:name=".ui.activity.RepoDetailActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".ui.activity.RepoDetailActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.activity.SearchActivity"
             android:theme="@style/AppThemeSearch" />
@@ -125,8 +126,12 @@
             android:name=".ui.activity.NewIssueActivity"
             android:label="@string/title_activity_new_issue"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ui.activity.IssueDetailActivity" />
-        <activity android:name=".ui.activity.PullRequestDetailActivity" />
+        <activity
+            android:name=".ui.activity.IssueDetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.activity.PullRequestDetailActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.activity.SettingsActivity"
             android:label="@string/title_activity_settings" />
