--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,4 +160,6 @@ dependencies {
 
     compile 'com.github.pedrovgs:renderers:2.0.3'
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile 'com.afollestad:cabinet-plugin-framework:0.1.0'
 }
