--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,4 +159,6 @@ dependencies {
     compile 'com.github.pedrovgs:renderers:2.0.3'
     compile 'com.jakewharton:butterknife:7.0.1'
 
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
 }
