--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'http://dl.bintray.com/amulyakhare/maven' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.1'
