--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ branches:
    - develop
    - master
 
-script: ./gradlew assembleDebug --info --stacktrace
+script: ./gradlew assembleDebug --debug
