--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
         <activity android:name=".ui.activity.ContentCommitsActivity" />
         <activity android:name=".ui.activity.OrganizationActivity" />
         <activity android:name=".ui.activity.ReleaseDetailActivity" />
+        <activity android:name=".ui.activity.LanguagesActivity" />
+        <activity android:name=".ui.activity.gists.GistEditorActivity" />
         <activity android:name=".ui.activity.CompareRepositoryCommitsActivity" />
         <activity android:name=".ui.activity.StatusActivity" />
         <activity
