--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.activity.SearchActivity"
-            android:theme="@style/AppThemeSearch" />
+            android:theme="@style/AppTheme.Search" />
         <activity android:name=".ui.dialog.NewIssueCommentActivity" />
         <activity android:name=".ui.activity.FileActivity" />
         <activity android:name=".ui.activity.ContentCommitsActivity" />
