--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ android {
             buildConfigField "String", "CLIENT_SECRET", "\"" + getGHSecret(true) + "\""
             buildConfigField "String", "CLIENT_CALLBACK", "\"" + getGHCallback(true) + "\""
             buildConfigField "String", "GH_GITSKARIOS_ACCOUNT_TOKEN", "null"
-            ext.betaDistributionGroupAliases="gitskarios-alpha-testers"
+            ext.betaDistributionGroupAliases = "gitskarios-alpha-testers"
         }
         cloudtest {
             minifyEnabled false
@@ -158,7 +158,7 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.2.2@aar') {
         transitive = true
     }
-    compile('com.mikepenz:materialdrawer:4.0.8@aar') {
+    compile('com.mikepenz:materialdrawer:4.3.5@aar') {
         transitive = true
     }
     compile('com.mikepenz:actionitembadge:3.1.1@aar')
