--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,5 +180,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
 
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'com.fewlaps.quitnowcache:quitnow-cache:1.1'
 
 }
