--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,13 +29,18 @@
         android:launchMode="singleInstance"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activity.LoginActivity"
-            android:label="@string/app_name">
+            android:name=".ui.activity.WelcomeActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activity.GithubLoginActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
