--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,16 +31,13 @@
         <activity
             android:name=".ui.activity.WelcomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Welcome">
+            android:theme="@style/AppTheme.Welcome"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.activity.GithubLoginActivity"
-            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -66,7 +63,6 @@
         <activity android:name=".ui.activity.OrganizationActivity" />
         <activity android:name=".ui.activity.ReleaseDetailActivity" />
         <activity android:name=".ui.activity.LanguagesActivity" />
-        <activity android:name=".ui.activity.GithubEnterpriseLoginActivity" />
         <activity android:name=".ui.activity.gists.GistEditorActivity" />
         <activity android:name=".ui.activity.CompareRepositoryCommitsActivity" />
         <activity android:name=".ui.activity.StatusActivity" />
