--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-SIGN_FILE=keystore/app.keystore.jks
+SIGN_FILE=../keystore/app.keystore.jks
 SIGN_KEYSTORE_PASS=android
 SIGN_KEYSTORE_ALIAS=alorma
 SIGN_KEYSTORE_ALIAS_PASS=DKALFARN8ERCX
@@ -11,4 +11,4 @@ GH_DEV_CALLBACK=gitskariosgithubdevel://oauth
 
 GH_PRO_ID=5dbfca95aa4de59f4a1c
 GH_PRO_SECRET=6caff6f4a19b71f4e847995e95fc19e831474bce
-GH_PRO_CALLBACK=gitskariosgithub://oauth
+GH_PRO_CALLBACK=gitskarios://oauth
