--- a/app/src/enterprise/AndroidManifest.xml
+++ b/app/src/enterprise/AndroidManifest.xml
@@ -7,6 +7,16 @@
     <application>
         <activity android:name=".ui.activity.GithubEnterpriseLoginActivity"
             android:theme="@style/AppTheme.Welcome"/>
+
+        <service android:name=".account.AccountEnterpriseService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/account_enterprise_authenticator" />
+        </service>
     </application>
 
 </manifest>
