--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:launchMode="singleInstance"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:sharedUserId="GITSKARIOS"
+        android:sharedUserLabel="@string/app_name">
         <activity
             android:name=".ui.activity.WelcomeActivity"
             android:label="@string/app_name"
@@ -168,7 +170,7 @@
 
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/account_enterprise_authenticator" />
+                android:resource="@xml/account_authenticator" />
         </service>
         <service
             android:name=".account.NotificationsSyncService"
