--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,7 @@ branches:
    - develop
    - master
 
+before_script:
+- git submodule update --init --recursive
+
 script: ./gradlew assembleDebug
