--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
 }
 apply plugin: 'com.android.application'
+apply plugin: 'com.fernandocejas.frodo'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
