--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.3.1'
         classpath 'io.fabric.tools:gradle:1.19.2'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+        classpath "com.fernandocejas.frodo:frodo-plugin:0.8.1"
     }
 }
 
