--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,14 +132,6 @@ def getGHCallback(pro) {
     }
 }
 
-
-assembleRelease.dependsOn clean
-assembleRelease.doLast {
-    tasks.crashlyticsUploadDistributionGithubRelease.execute()
-    tasks.crashlyticsUploadDistributionEnterpriseRelease.execute()
-}
-
-
 dependencies {
     debugCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'debug')
     releaseCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'release')
@@ -194,5 +186,8 @@ dependencies {
 
     compile 'com.android.support:multidex:1.0.1'
     compile 'io.reactivex:rxandroid:1.0.1'
+    compile('com.crashlytics.sdk.android:answers:1.3.3@aar') {
+        transitive = true;
+    }
 
 }
