New repository screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -158,6 +158,9 @@
         <activity
             android:name="com.alorma.github.emoji.EmojisActivity"
             android:label="@string/emoji_activity" />
+        <activity
+            android:name="com.alorma.github.ui.activity.CreateRepositoryActivity"
+            android:label="@string/create_repository_activity" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
