update gradle to use in gitskarios app

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':app', ':sdks:GithubAndroidSdk', ':libraries:breadcrumbs', ':libraries:atelier', ':sdks:GithubAndroidSdk:GitskariosCore'
+include ':app'
+include ':sdks:GithubAndroidSdk'
+include ':libraries:breadcrumbs'
+include ':libraries:atelier'
+include ':sdks:GithubAndroidSdk:GitskariosCore'
