--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,20 +137,17 @@ dependencies {
     debugCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'libraryDebug')
     releaseCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'libraryRelease')
     // Submodules
-
-    compile project(':libraries:breadcrumbs')
-    compile project(':libraries:atelier')
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
     }
     compile 'com.github.xiprox.errorview:library:2.2.0'
-    compile 'com.android.support:design:23.1.0'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:palette-v7:23.1.0'
-    compile 'com.android.support:recyclerview-v7:23.1.0'
-    compile 'com.android.support:cardview-v7:23.1.0'
-    compile 'com.google.android.gms:play-services-analytics:8.1.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:palette-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.google.android.gms:play-services-analytics:8.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -190,5 +187,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:answers:1.3.3@aar') {
         transitive = true;
     }
+    compile 'com.github.Musenkishi:Atelier:1.3.1'
 
 }
