--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,24 @@ language: android
 sudo: true
 android:
   components:
-   - build-tools-23.0.1
-   - android-23
-   - extra-android-m2repository
-   - extra-google-google_play_services
-   - extra-google-m2repository
+  - build-tools-23.0.1
+  - android-23
+  - extra-android-m2repository
+  - extra-google-google_play_services
+  - extra-google-m2repository
   licenses:
-   - android-sdk-license-.+
-
+  - android-sdk-license-.+
 branches:
   only:
-   - develop
-   - master
-
+  - develop
+  - master
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
-  file: "apps/Gitskarios/app/build/outputs/apk/app-github-debug.apk"
-  skip_cleanup: true
+  api_key:
+    secure: e8vh46Ei3Xf1KUk/+8UP0wXcIgqtuPLj2cZY3PdUCCo8C8Kc6xmtMRH6yAiNG0b02GmJf/yLn2MXJvC9spVf+vsGDtl+cqB4qBdaF9Ei5ekf1X+X3cjW9t6NR3acj85mxC4EjeIodO81PCcrJ+BZBHzEbi4Zy0HADfHuxTOHxwE=
+  file: apps/Gitskarios/app/build/outputs/apk/app-github-debug.apk
   on:
     tags: true
-
 before_script:
 - git submodule update --init --recursive
-
 script: ./gradlew assembleGithubDebug
