--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,11 +39,7 @@
         android:theme="@style/AppTheme.Welcome"
         android:launchMode="singleInstance"
         >
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
+      <!--
       <intent-filter>
         <action android:name="android.intent.action.VIEW"/>
 
@@ -52,8 +48,16 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
       </intent-filter>
+      -->
     </activity>
-    <activity android:name=".ui.activity.MainActivity"/>
+    <activity android:name=".ui.activity.MainActivity">
+
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
     <activity android:name=".ui.activity.ProfileActivity"/>
     <activity android:name=".ui.activity.CommitDetailActivity"/>
     <activity
