--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,11 @@ android {
       buildConfigField "String", "CLIENT_CALLBACK", "\"" + getGHCallback(true) + "\""
     }
   }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
+  }
 }
 
 def getCurrentGitHash() {
