--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,8 +142,8 @@ def getGHCallback(pro) {
 }
 
 dependencies {
-  debugCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'libraryDebug')
-  releaseCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'libraryRelease')
+  debugCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'debug')
+  releaseCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'release')
   // Submodules
   provided 'com.squareup.dagger:dagger-compiler:1.2.2'
   compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
