--- a/app/src/github/AndroidManifest.xml
+++ b/app/src/github/AndroidManifest.xml
@@ -1,5 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <application>
+    <activity
+        android:name=".ui.activity.WelcomeActivity"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme.Welcome"
+        android:launchMode="singleInstance"
+        >
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+
+        <data android:scheme="@string/oauth_scheme"/>
+
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+      </intent-filter>
+    </activity>
   </application>
 </manifest>
