--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,17 +161,15 @@ dependencies {
   compile 'se.emilsjolander:stickylistheaders:2.7.0'
   compile 'com.nineoldandroids:library:2.4.0'
   compile 'org.ocpsoft.prettytime:prettytime:4.0.0.Final'
-
   compile('com.mikepenz:aboutlibraries:5.2.2@aar') {
     transitive = true
   }
   compile('com.mikepenz:materialdrawer:4.3.7@aar') {
     transitive = true
   }
-  compile('com.mikepenz:actionitembadge:3.1.1@aar')
+  compile 'com.mikepenz:actionitembadge:3.1.1@aar'
   compile 'com.mikepenz:octicons-typeface:3.0.1@aar'
   compile 'com.mikepenz:google-material-typeface:1.2.0@aar'
-
   compile 'com.github.d-max:spots-dialog:0.4'
   compile 'com.squareup:otto:1.3.8'
   compile 'com.squareup.dagger:dagger:1.2.2'
@@ -179,7 +177,6 @@ dependencies {
   compile 'com.github.alorma:diff-textview:1.1.0'
   compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
   compile 'com.timehop.stickyheadersrecyclerview:library:0.4.2@aar'
-
   compile 'com.afollestad:material-cab:0.1.4'
   compile('com.github.afollestad.material-dialogs:core:0.8.5.2@aar') {
     transitive = true
@@ -187,19 +184,19 @@ dependencies {
   compile('com.github.afollestad.material-dialogs:commons:0.8.5.2@aar') {
     transitive = true
   }
-
   compile 'com.github.pedrovgs:renderers:2.0.3'
   compile 'com.jakewharton:butterknife:7.0.1'
-
   compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-  compile("com.fewlaps.quitnowcache:quitnow-cache:1.2") {
+  compile('com.fewlaps.quitnowcache:quitnow-cache:1.2') {
     exclude module: 'joda-time'
   }
-
   compile 'com.android.support:multidex:1.0.1'
   compile 'io.reactivex:rxandroid:1.0.1'
   compile('com.crashlytics.sdk.android:answers:1.3.3@aar') {
     transitive = true;
   }
   compile 'com.github.Musenkishi:Atelier:1.3.1'
+  compile 'com.github.bumptech.glide:glide:3.6.1'
+  compile 'jp.wasabeef:glide-transformations:1.3.1'
+  compile 'com.github.florent37:glidepalette:1.0.4@aar'
 }
