--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,18 @@ android:
   - extra-google-m2repository
   licenses:
   - android-sdk-license-.+
+
+before_script:
+- git submodule update --init --recursive
+script: ./gradlew clean assembleGithubDebug assembleEnterpriseDebug
+
 deploy:
   provider: releases
   api_key:
     secure: e8vh46Ei3Xf1KUk/+8UP0wXcIgqtuPLj2cZY3PdUCCo8C8Kc6xmtMRH6yAiNG0b02GmJf/yLn2MXJvC9spVf+vsGDtl+cqB4qBdaF9Ei5ekf1X+X3cjW9t6NR3acj85mxC4EjeIodO81PCcrJ+BZBHzEbi4Zy0HADfHuxTOHxwE=
-  file: apps/Gitskarios/app/build/outputs/apk/app-github-debug.apk
+  file_glob: true
+    file:
+      - app/build/outputs/apk/app*.apk
   on:
     tags: true
     all_branches: true
-before_script:
-- git submodule update --init --recursive
-script: ./gradlew clean assembleGithubDebug assembleEnterpriseDebug
