--- a/app/build.gradle
+++ b/app/build.gradle
@@ -162,18 +162,20 @@ dependencies {
   debugCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'debug')
   releaseCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'release')
   // Submodules
-  provided 'com.squareup.dagger:dagger-compiler:1.2.2'
   compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
     transitive = true;
   }
   compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
   compile 'com.github.xiprox.errorview:library:2.2.0'
+
+  compile 'com.google.android.gms:play-services:8.4.0'
+  compile 'com.google.android.gms:play-services-analytics:8.4.0'
+
   compile 'com.android.support:design:23.1.1'
   compile 'com.android.support:appcompat-v7:23.1.1'
   compile 'com.android.support:palette-v7:23.1.1'
   compile 'com.android.support:recyclerview-v7:23.1.1'
   compile 'com.android.support:cardview-v7:23.1.1'
-  compile 'com.google.android.gms:play-services-analytics:8.3.0'
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
   compile 'se.emilsjolander:stickylistheaders:2.7.0'
   compile 'com.nineoldandroids:library:2.4.0'
@@ -216,3 +218,5 @@ dependencies {
   compile 'jp.wasabeef:glide-transformations:1.3.1'
   compile 'com.github.florent37:glidepalette:1.0.4@aar'
 }
+
+apply plugin: 'com.google.gms.google-services'
