--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:2.0.0-alpha2'
     classpath 'io.fabric.tools:gradle:1.19.2'
+    classpath 'com.google.gms:google-services:2.0.0-alpha3'
   }
 }
 
