--- a/app/build.gradle
+++ b/app/build.gradle
@@ -205,9 +205,7 @@ dependencies {
   compile 'com.github.pedrovgs:renderers:2.0.3'
   compile 'com.jakewharton:butterknife:7.0.1'
   compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-  compile('com.fewlaps.quitnowcache:quitnow-cache:1.2') {
-    exclude module: 'joda-time'
-  }
+  compile 'com.fewlaps.quitnowcache:quitnow-cache:1.4'
   compile 'com.android.support:multidex:1.0.1'
   compile 'io.reactivex:rxandroid:1.0.1'
   compile('com.crashlytics.sdk.android:answers:1.3.3@aar') {
