--- a/app/build.gradle
+++ b/app/build.gradle
@@ -215,6 +215,9 @@ dependencies {
   compile 'com.github.bumptech.glide:glide:3.6.1'
   compile 'jp.wasabeef:glide-transformations:1.3.1'
   compile 'com.github.florent37:glidepalette:1.0.4@aar'
+
+  testCompile 'junit:junit:4.12'
+  testCompile 'org.assertj:assertj-core:1.7.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
