--- a/app/src/github/AndroidManifest.xml
+++ b/app/src/github/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.alorma.github">
 
   <uses-permission android:name="com.android.vending.BILLING"/>
   <application>
@@ -12,6 +13,28 @@
         <action android:name="android.intent.action.VIEW"/>
 
         <data android:scheme="@string/oauth_scheme"/>
+
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+      </intent-filter>
+    </activity>
+
+    <activity
+        android:name=".Interceptor"
+        android:theme="@android:style/Theme.NoDisplay"
+        >
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+
+        <data
+            android:host="github.com"
+            android:scheme="http"
+            />
+        <data
+            android:host="github.com"
+            android:scheme="https"
+            />
+        <data android:pathPattern=".*"/>
 
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
