--- a/app/build.gradle
+++ b/app/build.gradle
@@ -219,6 +219,8 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:1.3.1'
     compile 'com.github.florent37:glidepalette:1.0.4@aar'
 
+    compile 'cat.ereza:customactivityoncrash:1.4.0'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:1.7.0'
 }
