--- a/app/src/github/AndroidManifest.xml
+++ b/app/src/github/AndroidManifest.xml
@@ -1,44 +1,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alorma.github">
 
-  <uses-permission android:name="com.android.vending.BILLING"/>
-  <application>
-    <activity
-        android:name="com.alorma.github.ui.activity.WelcomeActivity"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme.Welcome"
-        android:launchMode="singleInstance"
-        >
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW"/>
+    <uses-permission android:name="com.android.vending.BILLING" />
+    <application>
+        <activity
+            android:name="com.alorma.github.ui.activity.WelcomeActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance"
+            android:theme="@style/AppTheme.Welcome">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-        <data android:scheme="@string/oauth_scheme"/>
+                <data android:scheme="@string/oauth_scheme" />
 
-        <category android:name="android.intent.category.DEFAULT"/>
-        <category android:name="android.intent.category.BROWSABLE"/>
-      </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+        </activity>
 
-    <activity
-        android:name=".Interceptor"
-        android:theme="@android:style/Theme.NoDisplay"
-        >
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW"/>
+        <activity
+            android:name=".Interceptor"
+            android:theme="@android:style/Theme.NoDisplay">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-        <data
-            android:host="github.com"
-            android:scheme="http"
-            />
-        <data
-            android:host="github.com"
-            android:scheme="https"
-            />
-        <data android:pathPattern=".*"/>
+                <data
+                    android:host="github.com"
+                    android:scheme="http" />
+                <data
+                    android:host="github.com"
+                    android:scheme="https" />
+                <data android:pathPattern=".*" />
 
-        <category android:name="android.intent.category.DEFAULT"/>
-        <category android:name="android.intent.category.BROWSABLE"/>
-      </intent-filter>
-    </activity>
-  </application>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.activity.EnterpriseAdActivity"
+            android:theme="@style/EnterpriseTheme"
+            android:label=""/>
+    </application>
 </manifest>
