--- a/app/build.gradle
+++ b/app/build.gradle
@@ -222,6 +222,8 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:1.7.0'
+
+    compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
