--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 23
-        versionName "2.7.9"
-        versionCode 27900
+        versionName "2.8.0"
+        versionCode 28000
         resValue "string", "app_git_hash", getCurrentGitHash()
 
         multiDexEnabled true
@@ -224,6 +224,7 @@ dependencies {
     testCompile 'org.assertj:assertj-core:1.7.0'
 
     compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
+    compile 'com.jakewharton:process-phoenix:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
