--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,21 @@
 buildscript {
     repositories {
+        jcenter()
+        mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.4'
+        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
     }
 }
-apply plugin: 'com.android.application'
 
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
-}
+apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
+
 
 apply plugin: 'io.fabric'
 //gradle dependencyUpdates -Drevision=release
