--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,11 @@ buildscript {
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
         maven { url "https://jitpack.io" }
+        maven { url "http://dl.bintray.com/android/android-tools" }
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.21.2'
         classpath 'me.tatarka:gradle-retrolambda:3.2.4'
         classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
         classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.5.0"
@@ -68,7 +69,6 @@ android {
 
 
     variantFilter { variant ->
-
         if (
         (variant.buildType.name == "release") && signingConfigs.playStore.storeFile == null) {
             variant.ignore = true
