--- a/app/build.gradle
+++ b/app/build.gradle
@@ -210,7 +210,7 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.2.2@aar') {
         transitive = true
     }
-    compile('com.mikepenz:materialdrawer:4.3.7@aar') {
+    compile('com.mikepenz:materialdrawer:4.6.4@aar') {
         transitive = true
     }
     compile 'com.mikepenz:actionitembadge:3.1.1@aar'
@@ -219,7 +219,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile 'com.wefika:flowlayout:0.4.0'
-    compile 'com.github.alorma:diff-textview:1.1.0'
+    compile 'com.github.alorma:diff-textview:1.3.0'
     compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
     compile 'com.timehop.stickyheadersrecyclerview:library:0.4.2@aar'
     compile 'com.afollestad:material-cab:0.1.4'
@@ -250,6 +250,8 @@ dependencies {
 
     compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
     compile 'com.jakewharton:process-phoenix:1.0.2'
+
+    compile 'com.github.alorma:timelineview:2.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
