new login basic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,13 @@
         <category android:name="android.intent.category.DEFAULT"/>
 
         <data
-            android:host="gist.github.com"
+            android:host="hgist.github.com"
+            android:scheme="http"
+            android:mimeType="text/*"
+            />
+        <data
+            android:host="hgist.github.com"
+            android:scheme="https"
             android:mimeType="text/*"
             />
       </intent-filter>
