Update gradle to use gplay-secret.json in root

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -268,7 +268,7 @@ dependencies {
 }
 
 play {
-  jsonFile = file('gplay-secret.json')
+  jsonFile = file('../gplay-secret.json')
   track = 'alpha'
 }
 
